# Edge-LLM-Infra

./: .gitignore  build.sh
docker/scripts/: llm_docker_run.sh
hybrid-comm/: CMakeLists.txt
hybrid-comm/include/: pzmq.hpp  pzmq_data.h
hybrid-comm/include/libzmq/: zmq.h  zmq_utils.h
hybrid-comm/src/: pzmq_data.cpp
infra-controller/: CMakeLists.txt
infra-controller/include/: StackFlow.h  StackFlowUtil.h  channel.h
infra-controller/src/: StackFlow.cpp  StackFlowUtil.cpp  channel.cpp
network/include/network/: Acceptor.h  Buffer.h  Callbacks.h  Channel.h  Connector.h  Endian.h  EventLoop.h  EventLoopThread.h  EventLoopThreadPool.h  InetAddress.h  Poller.h  Socket.h  TcpClient.h  TcpConnection.h  TcpServer.h
network/src/: Acceptor.cc  Buffer.cc  CMakeLists.txt  Channel.cc  Connector.cc  EventLoop.cc  EventLoopThread.cc  EventLoopThreadPool.cc  InetAddress.cc  Poller.cc  Socket.cc  SocketsOps.cc  TcpClient.cc  TcpConnection.cc  TcpServer.cc  util.cc
node/llm/: README.md
node/test/: CMakeLists.txt
node/test/src/: main.cpp
sample/: CMakeLists.txt  pz_rpc_server.cc  rpc_server.cc  test.py
unit-manager/: CMakeLists.txt  sys_config.json
unit-manager/include/: all.h  event_loop.h  remote_server.h  session.h  unit_data.h  zmq_bus.h
unit-manager/src/: config.cpp  event_loop.cpp  main.cpp  remote_action.cpp  remote_server.cpp  tcp_comm.cpp  unit_data.cpp  zmq_bus.cpp
utils/: sample_log.h
